Remove module opens code and use lenni reflection